--- a/client/src/assets/scss/_common.scss
+++ b/client/src/assets/scss/_common.scss
@@ -1,12 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
-
 html {
   height: 100%;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
+  font-family: "Poppins", sans-serif;
   height: inherit;
-  cursor: url("../images/default.svg"), auto;
+  background-color: #fff;
+}
+
+#app {
+  height: inherit;
 }
