--- a/client/src/assets/scss/_common.scss
+++ b/client/src/assets/scss/_common.scss
@@ -5,10 +5,10 @@ html {
 body {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
-  height: inherit;
+  height: 100%;
   background-color: #fff;
 }
 
-#app {
-  height: inherit;
+#root {
+  height: 100%;
 }
