--- a/client/src/assets/scss/_reset.scss
+++ b/client/src/assets/scss/_reset.scss
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
@@ -75,7 +77,7 @@ audio,
 video {
   border: 0px;
   outline: 0px;
-  font-size: 100%;
+  font-size: inherit;
   vertical-align: baseline;
   background: transparent;
 }
@@ -120,12 +122,15 @@ button {
 button {
   font-family: inherit;
   cursor: pointer;
+  &:disabled {
+    cursor: default;
+  }
 }
 
 a {
   margin: 0px;
   padding: 0px;
-  font-size: 100%;
+  font-size: inherit;
   vertical-align: baseline;
   background: transparent;
   color: inherit;
