--- a/client/src/pages/Document/ToolBar/ToolBar.module.scss
+++ b/client/src/pages/Document/ToolBar/ToolBar.module.scss
@@ -60,6 +60,7 @@
   width: 48px;
   border-radius: 24px;
   padding: 15px 0px;
+  z-index: 1;
   button {
     position: relative;
     display: flex;
