--- a/client/src/pages/Document/Document.module.scss
+++ b/client/src/pages/Document/Document.module.scss
@@ -1,1 +1,13 @@
-
+.container {
+  position: relative;
+  height: calc(100% - 108px);
+  background-color: #f1f3f4;
+  .board {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+    transform-origin: top left;
+  }
+}
