--- a/client/src/pages/Document/Document.module.scss
+++ b/client/src/pages/Document/Document.module.scss
@@ -9,5 +9,12 @@
     background-color: #fff;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
     transform-origin: top left;
+    .shapes {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
