--- a/client/src/pages/Document/Shapes/Shape.module.scss
+++ b/client/src/pages/Document/Shapes/Shape.module.scss
@@ -14,5 +14,10 @@
       fill-rule: evenodd;
       stroke-linejoin: round;
     }
+    circle {
+      stroke: rgba(38, 38, 38, 1);
+      fill-rule: evenodd;
+      stroke-linejoin: round;
+    }
   }
 }
