--- a/client/src/pages/Document/Header/Header.module.scss
+++ b/client/src/pages/Document/Header/Header.module.scss
@@ -22,6 +22,10 @@
     }
   }
   .slides {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
     gap: 15px;
@@ -53,7 +57,7 @@
       height: 35px;
       color: #000;
       border: none;
-      transition: background-color 0.2s ease-in-out;
+      transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
       i {
         font-size: 24px;
       }
