--- a/client/src/components/Document/Header/Header.module.scss
+++ b/client/src/components/Document/Header/Header.module.scss
@@ -136,3 +136,14 @@
     color: #3c4043;
   }
 }
+
+.dropdown {
+  button {
+    span {
+      font-size: 16px;
+    }
+    i {
+      font-size: 24px;
+    }
+  }
+}
