--- a/client/src/components/Document/Resizer/Resizer.module.scss
+++ b/client/src/components/Document/Resizer/Resizer.module.scss
@@ -4,8 +4,8 @@
   left: -15px;
   border: 10px solid #669df6;
   background-color: transparent;
+  pointer-events: none;
   z-index: 1;
-  cursor: move;
   button {
     position: absolute;
     background-color: #669df6;
@@ -17,6 +17,7 @@
     --align: calc(var(--size) / 2 * -1);
     --scale: 1;
     transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: auto;
     &:active {
       --scale: 1.5;
     }
