--- a/client/src/components/Document/Shapes/Shape.module.scss
+++ b/client/src/components/Document/Shapes/Shape.module.scss
@@ -3,10 +3,16 @@
   top: 0px;
   left: 0px;
   background-color: transparent;
-  &:is(.selected) {
-    cursor: move;
+  .overlay {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
   }
   svg {
+    width: 100%;
+    height: 100%;
     fill: #fff;
     stroke-width: 12;
     path {
