--- a/client/src/components/Document/Shapes/TextBox/TextBox.module.scss
+++ b/client/src/components/Document/Shapes/TextBox/TextBox.module.scss
@@ -7,8 +7,13 @@
   height: 100%;
   textarea {
     font-size: 80px;
+    max-height: 150px;
+    background-color: transparent;
     border: none;
     resize: none;
     outline: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 }
