--- a/client/src/pages/Document/Document.module.scss
+++ b/client/src/pages/Document/Document.module.scss
@@ -9,6 +9,7 @@
     background-color: #fff;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
     transform-origin: top left;
+    user-select: none;
   }
 }
 
