--- a/client/src/components/Document/Shapes/TextBox/TextBox.module.scss
+++ b/client/src/components/Document/Shapes/TextBox/TextBox.module.scss
@@ -1,19 +1,15 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 25px;
+.field {
+  font-size: 80px;
+  max-height: 150px;
+  background-color: transparent;
+  border: none;
+  resize: none;
+  outline: none;
   width: 100%;
-  height: 100%;
-  textarea {
-    font-size: 80px;
-    max-height: 150px;
-    background-color: transparent;
-    border: none;
-    resize: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  min-height: 100%;
+  overflow: hidden;
+  cursor: default;
+  &:not(:read-only) {
+    cursor: text;
   }
 }
