--- a/client/src/pages/Document/Document.module.scss
+++ b/client/src/pages/Document/Document.module.scss
@@ -10,6 +10,7 @@
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
     transform-origin: top left;
     user-select: none;
+    overflow: hidden;
   }
 }
 
