--- a/client/src/components/Slides/Slides.module.scss
+++ b/client/src/components/Slides/Slides.module.scss
@@ -85,6 +85,10 @@
         box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
         transform-origin: top left;
         user-select: none;
+        canvas {
+          width: 100%;
+          height: 100%;
+        }
       }
       button {
         position: absolute;
