--- a/client/src/components/Modal/Modal.module.scss
+++ b/client/src/components/Modal/Modal.module.scss
@@ -1,3 +1,16 @@
+.enter {
+  .dialog,
+  .overlay {
+    animation: fadeIn 0.3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  }
+}
+.exit {
+  .dialog,
+  .overlay {
+    animation: fadeOut 0.3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  }
+}
+
 .container {
   position: fixed;
   top: 0;
@@ -18,6 +31,24 @@
   }
 }
 
+.container {
+  overflow-y: auto;
+  .dialog {
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+  }
+  .content[data-size="md"] {
+    max-width: 550px;
+  }
+  .content[data-size="sm"] {
+    max-width: 400px;
+  }
+  .content[data-size="lg"] {
+    max-width: 650px;
+  }
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -26,67 +57,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 99;
-  animation: fadeOut 0.3s linear forwards;
-  &:is(.show) {
-    animation: fadeIn 0.3s linear forwards;
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .enter {
-    .dialog {
-      animation: show_modal 0.3s ease-in-out forwards;
-    }
-  }
-  .exit {
-    .dialog {
-      animation: show_modal 0.3s ease-in-out forwards reverse;
-    }
-  }
-  .container {
-    overflow-y: auto;
-    .dialog {
-      min-height: 100vh;
-      justify-content: center;
-      align-items: center;
-    }
-    .content[data-size="md"] {
-      max-width: 550px;
-    }
-    .content[data-size="sm"] {
-      max-width: 400px;
-    }
-    .content[data-size="lg"] {
-      max-width: 650px;
-    }
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .enter {
-    .dialog {
-      animation: slideInBottom 0.3s linear forwards;
-    }
-  }
-  .exit {
-    .dialog {
-      animation: slideInBottom 0.3s linear forwards reverse;
-    }
-  }
-  .container {
-    overflow-y: hidden;
-    .dialog {
-      height: 100%;
-      justify-content: center;
-      align-items: flex-end;
-      .content {
-        max-height: 80vh;
-        overflow-y: auto;
-        margin: 0px;
-        border-radius: 10px 10px 0px 0px;
-      }
-    }
-  }
 }
 
 @keyframes fadeIn {
@@ -104,25 +74,5 @@
   }
   to {
     opacity: 0;
-  }
-}
-
-@keyframes show_modal {
-  from {
-    transform: translateY(-150px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideInBottom {
-  from {
-    transform: translateY(100vh);
-  }
-  to {
-    transform: translateY(0px);
   }
 }
