--- a/client/src/components/ToolBar/ToolBar.module.scss
+++ b/client/src/components/ToolBar/ToolBar.module.scss
@@ -94,6 +94,19 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    button {
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 5px;
+        bottom: -5px;
+        left: 0px;
+        border-radius: 1px;
+        background-color: var(--bg);
+      }
+    }
     i {
       font-size: 24px;
     }
