--- a/client/src/components/Shapes/StickyNote/StickyNote.module.scss
+++ b/client/src/components/Shapes/StickyNote/StickyNote.module.scss
@@ -5,8 +5,9 @@
   width: 100%;
   height: 100%;
   box-shadow: rgba(60, 64, 67, 0.4) 0px 13.6928px 18.257px;
-  padding: 25px;
+  padding: 15px;
+  overflow: hidden;
   h2 {
-    font-size: 80px;
+    font-size: 14vw;
   }
 }
